# SerialOverSocket

./: CMakeLists.txt  README.md  config.json.sample
src/: ansi_color.h  charbuf.cc  charbuf.h  client_config.cc  client_config.h  client_main.cc  config.cc  config.h  connection.cc  connection.h  connection_server.cc  connection_server.h  dataproxy.cc  dataproxy.h  handler.cc  handler.h  ioloop.cc  ioloop.h  main.cc  serialport.cc  serialport.h  server_main.cc  snippets.cc  snippets.h  sockclient.cc  sockclient.h  socket.cc  socket.h  sockserver.cc  sockserver.h  version.h.in
